# advent_of_mb

./: Cargo.toml  README.md
.cargo/: config.toml
days/day-01-02/: Cargo.toml  README.md
days/day-01-02/src/: main.rs
days/day-03/: Cargo.toml  README.md
days/day-03/src/: main.rs
days/day-04-05/: Cargo.toml  README.md
days/day-04-05/src/: main.rs
days/day-06-07/: Cargo.toml  README.md
days/day-06-07/src/: main.rs
days/day-08/: Cargo.toml  README.md  build.rs
days/day-08/src/: main.rs
days/day-09/: Cargo.toml  README.md  build.rs
days/day-09/src/: main.rs
days/day-10/: Cargo.toml  README.md
days/day-10/src/: main.rs
days/day-11/: Cargo.toml  README.md  build.rs
days/day-11/src/: main.rs
days/day-12/: README.md
days/day-13/: README.md
doc/: setup_embeded_rust.odt
utils/: Cargo.toml
utils/src/: lib.rs
