[workspace]
resolver = "2"
members = [
    "days/day-01-02",
    "days/day-03",
    "days/day-04-05",
    #"days/day-06-07",
    #"days/day-08",
    #"days/day-09",
    #"days/day-10",
    #"days/day-11",
    #"days/day-12",
    #"days/day-13",
    #"days/day-14",
    #"days/day-15",
    #"days/day-16",
    ]