[workspace]
resolver = "2"
members = [
    "utils",
    "days/day-01-02",
    "days/day-03",
    "days/day-04-05",
    "days/day-06-07",
    "days/day-08",
    "days/day-09",
    #"days/day-10",
    "days/day-11",
    #"days/day-12",
    #"days/day-13",
    #"days/day-14",
    #"days/day-15",
    #"days/day-16",
    ]

[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
