[package]
name = "day-04-05"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day-04-05"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
cortex-m = {version =  "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"
rtt-target = "0.6"
rand = {version = "0.9", features = ["small_rng"], default-features = false}
