[package]
name = "day-11"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day-11"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embedded-hal = "1.0.0"
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

embassy-nrf = { version = "0.3", features = [
    "defmt",
    "nrf52833",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-executor = { version = "0.7", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp", rev = "19d555b" }
